# CUDA_API_TEST

./: .gitignore  CMakeLists.txt  README.md
include/: mcuda.cuh
src/: main.cpp  mcuda.cu
test/: CMakeLists.txt  test.cpp
